syntax = "proto3";

option go_package = "hw3/proto";

package proto;

service BankAccountManager {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {}
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
  rpc ChangeAccountAmount(ChangeAccountAmountRequest) returns (ChangeAccountAmountResponse) {}
  rpc ChangeAccountName(ChangeAccountNameRequest) returns (ChangeAccountNameResponse) {}
}

message CreateAccountRequest {
  string name = 1;
  int64 amount = 2;
}

message CreateAccountResponse {
  string result = 1;
}

message DeleteAccountRequest {
  string name = 1;
}

message DeleteAccountResponse {
  string result = 1;
}

message GetAccountRequest {
  string name = 1;
}

message GetAccountResponse {
  string name = 1;
  int64 amount = 2;
}

message ChangeAccountAmountRequest {
  string name = 1;
  int64 amount = 2;
}

message ChangeAccountAmountResponse {
  string result = 1;
}

message ChangeAccountNameRequest {
  string name = 1;
  string new_name = 2;
}

message ChangeAccountNameResponse {
  string result = 1;
}

